--- a/Splunk/.classpath
+++ b/Splunk/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/anagarle/lib/splunk-sdk-java-1.6.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
