--- a/Splunk/SplunkReader.properties
+++ b/Splunk/SplunkReader.properties
@@ -1,20 +1,21 @@
 ## Splunk Settings
 hostname=10.10.100.83
-port=8080
+port=8089
 schema=https
 username=admin
 password=Cr@zy!123
 
-## Search Information
+## Search Information. 
 searchname=proxy
 appname=search
-interval=120
-from=1530190759
-to=1530190763
+interval=360000
+from=1529060759
+to=1530185763
+##  interval , from and to parameters are not needed for OTP jar. 
 
 ## Output Information
 outputfilepath=/Users/anagarle/Desktop/
 outputfileprefix=proxy
 
-## Time Duration to run next run
+## Time Duration to run next runs. Optional for OTP jar.
 sleeptime=0
