--- a/Splunk/.classpath
+++ b/Splunk/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/Users/anagarle/lib/splunk-sdk-java-1.6.5.jar"/>
+	<classpathentry kind="lib" path="/Users/anagarle/lib/javax.xml.bind.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
