--- a/Splunk/SplunkReader.properties
+++ b/Splunk/SplunkReader.properties
@@ -3,7 +3,7 @@ hostname=10.10.100.83
 port=8089
 schema=https
 username=admin
-password=Cr@zy!123
+encryptedpassword=6EB459861EA87E6AA7626ADCE0A0C97C
 
 ## Search Information. 
 searchname=proxy
@@ -19,3 +19,6 @@ outputfileprefix=proxy
 
 ## Time Duration to run next runs. Optional for OTP jar.
 sleeptime=0
+
+## Sanitization . true or false
+removequotes=false
